# snpedia-bulk

./: Cargo.toml  complete_data.json  mini.json
src/: main.rs  page_model.rs
