[package]
name = "snpedia-bulk"
version = "0.1.0"
authors = ["drbh <david.richard.holtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mediawiki = "0.1.17"

serde_json = "1.0"
serde_derive = "1.0.101"
serde = "1.0.101"

scraper = "0.11.0"

walkdir = "2"